# minidash

./: README.md  index.html  pyproject.toml
src/minidash/: __init__.py  encoder.py  mpeg4_encoder.py  server.py
